# ai-audio-brief

./: .gitignore  README.md  podcast_config.json  pyproject.toml
.github/workflows/: daily-podcast.yml
ai_vc_podcast/: __init__.py  cli.py  config.py  generate.py  io.py  openai_client.py  publish.py  schedule.py
docs/: configuration.md  reuse.md
prompts/: ai_vc_morning_brief.zh.md
prompts/examples/: creator_economy.zh.md  health_ai.zh.md  parenting_trends.zh.md
prompts/templates/: daily_news_brief.zh.md
tests/: test_generate.py  test_project_hygiene.py  test_publish.py  test_schedule.py  test_structure.py
